--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -203,6 +203,67 @@ footer {
 
 /* COMO COMPRAR */ 
 
+.comocomprar-banner {
+    h1 {
+        font-size: 40px;
+        text-align: center;
+        padding: 30px;
+    }
+    iframe {
+        height: 400px;
+        width: 100%;
+    }
+}
+
+.paso {
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+}
+
+.pasoapaso {
+    span {
+        font-size: 50px;
+        text-align: center;
+    }
+    h3 {
+        font-size: 40px;
+        padding-bottom: 35px;
+        text-align: center;
+        width: 100%;
+    }
+    p {
+        text-align: center;
+    }
+    width: 100%;
+}
+
+.paso-2 h3 {
+    padding-left: 0px;
+}
+
+.paso-2 #titulo {
+    order: 1;
+}
+
+.paso-2 #tuto {
+    order: 2;
+}
+
+.paso-4 h3 {
+    padding-left: 0px;
+}
+
+.paso-4 #titulo {
+    order: 1;
+}
+
+.paso-4 #tuto {
+    order: 2;
+}
+
+
+
 /* CONTACTO */ 
 
 .contactoh1 {
