--- a/scss/_boxmodel.scss
+++ b/scss/_boxmodel.scss
@@ -301,17 +301,12 @@ footer {
     }
 }
 
-.redes {
-    h3 {
-        margin-left: -50px;
-    }
-}
-
 .contactRedes {
-    margin-left: 40px;
     div {
         margin-bottom: 30px;
     }
+    justify-content: center;
+    align-items: center;
 }
 
 .contacto {
