--- a/scss/_extras.scss
+++ b/scss/_extras.scss
@@ -39,7 +39,7 @@ footer {
 }
 
 .ofertas {
-    background-image: url(../images/ofertas.png);
+    background-image: url(../images/ofertas.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -61,7 +61,7 @@ footer {
 }
 
 .pintureria{
-    background-image: url(../images/PINTURA.png);
+    background-image: url(../images/PINTURA.jpg);
 }
 
 .jardineria{
@@ -69,7 +69,7 @@ footer {
 }
 
 .herramientas{
-    background-image: url(../images/accesorios.png);
+    background-image: url(../images/accesorios.jpg);
 }
 
 .marcas img {
