--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -21,6 +21,17 @@ footer {
     }
 }
 
+.iframefooter {
+    span {
+        font-size: 13px;
+    }
+}    
+
+.contacto-footer {
+    margin-left: -15px !important;
+    font-size: 13px;
+}
+
 /* BANNER HOME */ 
 
 .bannerHome {
