--- a/css/style.css
+++ b/css/style.css
@@ -1013,6 +1013,13 @@ header {
 footer h3 {
   font-family: "Source Sans Pro", sans-serif; }
 
+.iframefooter span {
+  font-size: 13px; }
+
+.contacto-footer {
+  margin-left: -15px !important;
+  font-size: 13px; }
+
 /* BANNER HOME */
 .bannerHome h1 {
   font-family: 'Bebas Neue', cursive; }
@@ -1231,7 +1238,8 @@ header {
 
 /*FOOTER*/
 footer {
-  padding: 30px;
+  padding-top: 30px;
+  padding-left: 15px;
   padding-bottom: 15px;
   justify-content: space-between; }
 
@@ -1330,7 +1338,8 @@ footer {
   padding: 20px 0px; }
 
 .howWeWork {
-  margin: 0px 80px; }
+  margin: 0px 80px;
+  overflow-x: hidden; }
   .howWeWork .howWeWork-text {
     padding-left: 50px;
     padding-top: 30px; }
@@ -1480,6 +1489,10 @@ footer {
   .contacto-work h5 {
     padding-top: 15px;
     padding-bottom: 30px; }
+
+.flex-marcas {
+  align-items: center;
+  justify-content: center; }
 
 /* HEADER */
 header {
@@ -1681,6 +1694,13 @@ header {
 /* FOOTER */
 footer h3 {
   font-family: "Source Sans Pro", sans-serif; }
+
+.iframefooter span {
+  font-size: 13px; }
+
+.contacto-footer {
+  margin-left: -15px !important;
+  font-size: 13px; }
 
 /* BANNER HOME */
 .bannerHome h1 {
@@ -2268,6 +2288,13 @@ header {
 /* FOOTER */
 footer h3 {
   font-family: "Source Sans Pro", sans-serif; }
+
+.iframefooter span {
+  font-size: 13px; }
+
+.contacto-footer {
+  margin-left: -15px !important;
+  font-size: 13px; }
 
 /* BANNER HOME */
 .bannerHome h1 {
