--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -136,6 +136,10 @@ footer {
 
     .howWeWork-text {
         background-color: rgb(235, 235, 235);
+        
+    p {
+        color: rgb(119, 117, 117);
+    }
     }
 
     h2 {
