--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -61,7 +61,7 @@ footer {
 
 .botonWpp {
     h2 {
-        text-align: center;
+        text-align: right;
     }
 }
 
@@ -77,7 +77,6 @@ footer {
     
     p {
         font-family: sans-serif;
-        font-size: 18px;
         text-align: right;
     }
 }
@@ -142,10 +141,19 @@ footer {
     }
     p {
         font-family: $source;
-        font-size: 18px;
+        font-size: 26px;
         text-align: center;
     }
 
+}
+
+
+.align-left {
+    text-align: left;
+}
+
+.align-right {
+    text-align: right;
 }
 
 .mision-valor {
