--- a/scss/_tamanios.scss
+++ b/scss/_tamanios.scss
@@ -57,12 +57,15 @@
     }
 }
 
-.botonWpp {
+.containerWpp {
     h2 {
-        font-size: 40px;
+        font-size: 50px;
     }
+}
+
+.botonWpp {
     img {
-        height: 70px;
+        height: 100px;
     }
 }
 
@@ -77,7 +80,7 @@
         font-size: 40px;
     }
     p {
-        font-size: 18px;
+        font-size: 30px;
     }
 }
 
@@ -104,6 +107,7 @@
     p {
         font-size: 18px;
     }
+    
 }
 
 .ferminLogoHowWe {
@@ -117,6 +121,10 @@
     p {
         font-size: 18px;
     }
+}
+
+.medios-pago {
+    height: 200px;
 }
 
 .howWeWork-main-text {
@@ -138,6 +146,9 @@
         p {
             font-size: 22px;
             width: 60%;
+        }
+        ul li {
+            font-size: 16px;
         }
 
 }
